--- a/YYKJ/android/wasteoilcustom/src/main/res/layout/activity_menu.xml
+++ b/YYKJ/android/wasteoilcustom/src/main/res/layout/activity_menu.xml
@@ -10,66 +10,193 @@
 
 
     <LinearLayout
-    style="@style/content_main"
-    android:baselineAligned="false">
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
-        android:orientation="horizontal"
-        style="@style/content_main_linear"
-        android:background="@android:color/holo_blue_light">
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:background="@android:color/holo_blue_light">
 
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/img_back"
-            android:id="@+id/returnAction"
-            android:scaleType="center"
-            android:visibility="invisible"
-            android:layout_alignParentLeft="true" />
-
-        <TextView
-            android:textSize="18dp"
-            android:textColor="#ff444444"
-            android:layout_height="match_parent"
-            android:text="@string/app_name"
-            android:layout_width="wrap_content"
-            android:gravity="center_vertical"
-            android:elevation="0dp" />
-
-    </LinearLayout>
-
-
-            <TextView
+            <LinearLayout
+            android:orientation="horizontal"
+                android:layout_height="50dp"
+                android:layout_width="match_parent">
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="?android:attr/actionModeCopyDrawable"
+                    android:scaleType="center"
+                    android:layout_alignParentLeft="true" />
+                <TextView
                 android:textSize="18dp"
                 android:textColor="#ff444444"
-                android:layout_height="100dp"
-                android:text="@string/product"
-                android:background="@android:color/holo_orange_light"
-                android:layout_width="200dp"
-                android:layout_margin="10dp"
-                android:onClick="product"
-                android:gravity="center_vertical" />
-            <TextView
-                android:textSize="18dp"
-                android:textColor="#ff444444"
-                android:layout_height="100dp"
-                android:text="@string/schedule"
-                android:background="@android:color/holo_orange_light"
-                android:layout_width="200dp"
-                android:layout_margin="10dp"
-               android:layout_gravity="right"
-                android:onClick="schedule"
-                android:gravity="center_vertical" />
-             <TextView
-                android:textSize="18dp"
-                android:textColor="#ff444444"
-                android:layout_height="100dp"
-                android:text="@string/recReport"
-                 android:layout_margin="10dp"
-                 android:onClick="recReport"
-                android:background="@android:color/holo_orange_light"
-                android:layout_width="200dp"
-                android:gravity="center_vertical" />
+                android:layout_height="match_parent"
+                android:text="@string/app_name"
+                android:layout_width="wrap_content"
+                android:gravity="center_vertical"
+                android:elevation="0dp" />
+
+
+            </LinearLayout>
+
+            <include
+                layout="@layout/view_line_horizontal" />
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15.0dip"
+                    android:text="系统通知"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@color/black_overlay"
+                    android:textSize="15sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5.0dip"
+                    android:text="无"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@drawable/selector_textcolor_white_grey"
+                    android:textSize="15sp" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                style="@style/content_main"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="product"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:src="?android:attr/actionModeCopyDrawable"
+                        android:scaleType="center"/>
+
+                    <TextView
+                        android:textSize="18dp"
+                        android:textColor="#ff444444"
+                        android:layout_height="wrap_content"
+                        android:text="@string/product"
+                        android:layout_width="match_parent"
+                        android:layout_margin="10dp"
+                        android:gravity="center_vertical" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="schedule"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:src="?android:attr/actionModeCopyDrawable"
+                        android:scaleType="center"
+                        android:layout_alignParentLeft="true" />
+
+                    <TextView
+                        android:textSize="18dp"
+                        android:textColor="#ff444444"
+                        android:layout_height="wrap_content"
+                        android:text="@string/schedule"
+                        android:layout_width="match_parent"
+                        android:layout_margin="10dp"
+                        android:layout_gravity="right"
+                        android:gravity="center_vertical" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="recReport"
+                    android:layout_weight="1">
+
+                    <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:src="?android:attr/actionModeCopyDrawable"
+                    android:id="@+id/returnAction"
+                    android:scaleType="center"
+                    android:layout_alignParentLeft="true" />
+
+                    <TextView
+                        android:textSize="18dp"
+                        android:textColor="#ff444444"
+                        android:layout_height="wrap_content"
+                        android:text="@string/recReport"
+                        android:layout_margin="10dp"
+                        android:layout_width="match_parent"
+                        android:gravity="center_vertical" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+            style="@style/content_main"
+            android:baselineAligned="false"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                        android:textSize="18dp"
+                        android:textColor="#ff444444"
+                        android:layout_height="100dp"
+                        android:text="@string/product"
+                        android:background="@android:color/holo_orange_light"
+                        android:layout_width="200dp"
+                        android:layout_margin="10dp"
+                        android:onClick="product"
+                        android:gravity="center_vertical" />
+                    <TextView
+                        android:textSize="18dp"
+                        android:textColor="#ff444444"
+                        android:layout_height="100dp"
+                        android:text="@string/schedule"
+                        android:background="@android:color/holo_orange_light"
+                        android:layout_width="200dp"
+                        android:layout_margin="10dp"
+                       android:layout_gravity="right"
+                        android:onClick="schedule"
+                        android:gravity="center_vertical" />
+                     <TextView
+                        android:textSize="18dp"
+                        android:textColor="#ff444444"
+                        android:layout_height="100dp"
+                        android:text="@string/recReport"
+                         android:layout_margin="10dp"
+                         android:onClick="recReport"
+                        android:background="@android:color/holo_orange_light"
+                        android:layout_width="200dp"
+                        android:gravity="center_vertical" />
+
+            </LinearLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
