--- a/YYKJ/android/wasteoilcustom/src/main/res/values/colors.xml
+++ b/YYKJ/android/wasteoilcustom/src/main/res/values/colors.xml
@@ -14,4 +14,8 @@
     <color name="grey_888888">#888888</color>
     <color name="grey_333333">#333333</color>
     <color name="grey_d3d3d3">#d3d3d3</color>
+    <color name="sale_text_grey_hint">#ffc7c7cd</color>
+    <color name="sale_text_grey_light">#ff808080</color>
+    <color name="white_light_80">#80ffffff</color>
+    <color name="white_light_40">#40ffffff</color>
 </resources>
