--- a/YYKJ/android/wasteoilcustom/src/main/res/layout/filter.xml
+++ b/YYKJ/android/wasteoilcustom/src/main/res/layout/filter.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/seller_bottom_color"
+    >
 
     <LinearLayout
         android:orientation="horizontal"
@@ -34,7 +37,11 @@
             />
 
     </LinearLayout>
-
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:scrollbars="vertical"
+        android:fadingEdge="vertical">
     <LinearLayout
         android:orientation="vertical"
         android:id="@+id/filter_conditions"
@@ -43,5 +50,5 @@
         android:layout_height="match_parent">
 
     </LinearLayout>
-
+</ScrollView>
 </LinearLayout>
