--- a/YYKJ/android/wasteoilcustom/src/main/res/layout/filter_condition.xml
+++ b/YYKJ/android/wasteoilcustom/src/main/res/layout/filter_condition.xml
@@ -2,16 +2,19 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_height="wrap_content">
+<LinearLayout
+    android:layout_width="wrap_content"
     android:layout_height="55dp"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="5dp"
     android:background="@color/white"
     android:orientation="horizontal">
-
     <TextView
         android:id="@id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+       android:layout_gravity="center_vertical"
         android:layout_marginLeft="20dp"
         android:layout_weight="1"
         android:ems="40"
@@ -32,6 +35,8 @@
         android:layout_height="match_parent"
         android:padding="10dp"
         android:src="@drawable/icon_arrow_right" />
+</LinearLayout>
+
 
 </LinearLayout>
 
