--- a/YYKJ/android/wasteoilcustom/src/main/res/layout/filter_condition_item.xml
+++ b/YYKJ/android/wasteoilcustom/src/main/res/layout/filter_condition_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/seller_bottom_color">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -26,14 +27,17 @@
             android:layout_weight="1" />
 
     </LinearLayout>
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:fadingEdge="vertical">
     <LinearLayout
         android:orientation="vertical"
         android:id="@+id/items"
         android:layout_width="match_parent"
-        android:background="@color/seller_bottom_color"
         android:layout_height="match_parent">
 
     </LinearLayout>
-
+</ScrollView>
 </LinearLayout>
