--- a/YYKJ/android/wasteoilcustom/src/main/res/layout/table_item.xml
+++ b/YYKJ/android/wasteoilcustom/src/main/res/layout/table_item.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#FFFFFF"
-    android:paddingBottom="5dp"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:paddingTop="5dp"
-    android:layout_height="60dp"
-    android:layout_width="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#FFFFFF">
 
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+        android:paddingBottom="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="5dp"
+        android:layout_height="55dp"
+        android:layout_weight="1"
+        android:layout_width="wrap_content">
 
         <TextView
             android:id="@+id/title"
@@ -25,7 +30,26 @@
             android:layout_alignLeft="@id/title"
             android:singleLine="true"
             android:ellipsize="end"
+            android:textSize="12dp"
             android:textColor="@color/grey" />
+
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:textSize="12dp"
+            android:layout_alignParentTop="true"
+            android:textColor="@color/grey" />
+    <TextView
+        android:id="@+id/info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="12dp"
+       android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:textColor="@color/grey" />
+</RelativeLayout>
     <ImageView
         android:id="@+id/list_ico"
         android:layout_width="50dp"
@@ -34,19 +58,4 @@
         android:layout_alignParentRight="true"
         android:src="@drawable/icon_arrow_right"
         />
-        <TextView
-            android:id="@+id/time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/list_ico"
-            android:layout_alignTop="@id/list_ico"
-            android:textColor="@color/grey" />
-    <TextView
-        android:id="@+id/info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-       android:layout_alignLeft="@+id/list_ico"
-        android:layout_alignBottom="@id/list_ico"
-        android:textColor="@color/grey" />
-
-</RelativeLayout>
+</LinearLayout>
