--- a/YYKJ/android/views/src/main/res/layout/filter_condition_item.xml
+++ b/YYKJ/android/views/src/main/res/layout/filter_condition_item.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/seller_bottom_color"
-    >
+    android:background="@color/seller_bottom_color">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -13,8 +11,8 @@
         android:background="@android:color/holo_blue_light">
 
         <ImageView
-            android:layout_width="50dp"
             android:id="@id/back"
+            android:layout_width="50dp"
             android:layout_height="match_parent"
             android:src="@drawable/selector_actionbar_back_btn"
             />
@@ -25,35 +23,19 @@
             android:text="xhdingdan"
             android:ems="40"
             android:layout_gravity="center_vertical"
-            android:id="@+id/title"
+            android:id="@+id/name"
             android:layout_weight="1" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:padding="10dp"
-            android:id="@+id/edit"
-            android:visibility="gone"
-            android:layout_height="match_parent"
-            android:src="@android:drawable/ic_menu_edit"
-            />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:padding="10dp"
-            android:id="@+id/ok"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_input_finish"
-            />
     </LinearLayout>
     <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:scrollbars="vertical"
         android:fadingEdge="vertical">
     <LinearLayout
         android:orientation="vertical"
-        android:id="@+id/filter_conditions"
+        android:id="@+id/items"
         android:layout_width="match_parent"
-        android:background="@color/seller_bottom_color"
         android:layout_height="match_parent">
 
     </LinearLayout>
