--- a/YYKJ/android/wasteoilcustom/src/main/res/values/styles.xml
+++ b/YYKJ/android/wasteoilcustom/src/main/res/values/styles.xml
@@ -41,4 +41,19 @@
         <item name="android:paddingLeft">10dp</item>
         <item name="android:paddingRight">10dp</item>
     </style>
+    <style name="form_dt">
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:ems">40</item>
+        <item name="android:layout_weight">0.5</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+    <style name="form_inputText">
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">40dp</item>
+    </style>
 </resources>
