--- a/YYKJ/app_android/project_demo/app/src/main/res/layout/activity_main.xml
+++ b/YYKJ/app_android/project_demo/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,61 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/refresh_view"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
 
     <TextView
         android:text="TextViewsadfasdfasd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:layout_weight="1" />
+        android:id="@+id/textView"/>
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:id="@+id/textView2"
-        android:layout_weight="1" />
+        android:id="@+id/textView2"/>
+    <com.eyun.framework.angular.baseview.CusLinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:ng_repeat="str in list">
+        <com.eyun.framework.angular.baseview.CusTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:ng_model="str+$index"/>
+
+        <!--  <com.eyun.framework.angular.baseview.CusTextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          app:ng_model="str+'-&#45;&#45;'"/>-->
+    </com.eyun.framework.angular.baseview.CusLinearLayout>
+
+    <Button
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button" />
+
+    <com.eyun.framework.angular.baseview.CusTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:ng_model="str123"/>
+    <com.eyun.framework.angular.baseview.CusTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:ng_repeat="str in list"
+        app:ng_model="str"/>
+<!--    <com.eyun.framework.angular.baseview.CusTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:ng_model="str123"/>
+      &lt;!&ndash;  app:ng_repeat="str in list"
+        app:ng_model="str"/>&ndash;&gt;
+    <com.eyun.framework.angular.baseview.CusTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:ng_model="'&#45;&#45;&#45;&#45;'+str123+'&#45;&#45;&#45;&#45;'"/>-->
 </LinearLayout>
